# azure-sphere-mbedtls

./: CMakeLists.txt  CMakeSettings.json  README.md  app_manifest.json  azure-sphere-mbedtls.sln  azure-sphere-mbedtls.vcxproj  azure-sphere-mbedtls.vcxproj.filters  main.c  mbedtls_user_config.h
mbedtls/include/mbedtls/: config.h
